src/objects/MyCar__c.object
<CustomObject>
    <fields>
        <fullName>Cathegory__c</fullName>
        <label>Cathegory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sport</fullName>
                </value>
                <value>
                    <fullName>passenger</fullName>
                </value>
                <value>
                    <fullName>truck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MyCars</relationshipLabel>
        <relationshipName>MyCars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MyCar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MyCar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>